# records

./: AUTHORS  ChangeLog  FAQ  INSTALL  INSTALL-NT  INSTALL-UNIX  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  bootstrap  configure  configure.ac  configure.in  elisp-comp  elisp-comp.in  records-dindex.el  records-index.el  records-load.el  records-search.el  records-util.el  records-vars.el  records.el  records.info  records.ps  recordsadmin.in
debian/: README.Debian  changelog  control  copyright  emacsen-install  emacsen-remove  emacsen-startup  info  postinst-emacsen  postinst.records-common  prerm-emacsen  prerm.records-common  rules
doc/: Makefile.am  Makefile.in  records.info  records.texi  stamp-vti  version.texi
src/: Makefile.am  Makefile.in  records-autoloads.el  records-dindex.el  records-index.el  records-macro.el  records-search.el  records-tex.el  records-util.el  records-vars.el  records-version.el  records-version.el.in  records.el  recordsadmin.in
